--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@ End Sticky Navigation
 					</div>
 					<!-- Express About Yourself -->
 					<div class="content text-center">
-						<h3 class="ddd">We're Creative</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<h3 class="ddd">Creative</h3>
+						<p>Alaways try to Productive things to solve real world problem
+							Think out of the box.
+						</p>
 					</div>
 				</div>
 			</div>
