--- a/index.html
+++ b/index.html
@@ -195,9 +195,8 @@ End Sticky Navigation
 					</div>
 					<!-- Express About Yourself -->
 					<div class="content text-center">
-						<h3>We're Professional</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<h3>Professional</h3>
+						<p>Never relate my personal life with my works/works-place</p>
 					</div>
 				</div>
 			</div>
@@ -211,9 +210,8 @@ End Sticky Navigation
 					</div>
 					<!-- Express About Yourself -->
 					<div class="content text-center">
-						<h3>We're Genius</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<h3>Genius</h3>
+						<p>think like a genius, do like a genius, behave like a commenar</p>
 					</div>
 				</div>
 			</div>
