--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3 class="ddd">Creative</h3>
-						<p>Alaways try to Productive things to solve real world problem
-							Think out of the box.
+						<p>Alaways try to Productive things to solve real world problem. Think out of the box.
 						</p>
 					</div>
 				</div>
@@ -196,7 +195,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3>Professional</h3>
-						<p>Never relate my personal life with my works/works-place</p>
+						<p>I'd liked describes my self as I have the standards of education and training that prepare members of the profession with the particular knowledge and skills necessary to perform their specific role within that profession Never relate my personal life with my works/works-place</p>
 					</div>
 				</div>
 			</div>
@@ -211,7 +210,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3>Genius</h3>
-						<p>think like a genius, do like a genius, behave like a commenar</p>
+						<p>Genius is a characteristic of original and exceptional insight in the performance of some art or endeavor that surpasses expectations, sets new standards for future works, establishes better methods of operation, or remains outside the capabilities of competitors. My fellow workers says I have all the quality. Think like a genius, do like a genius, behave like a Commoner</p>
 					</div>
 				</div>
 			</div>
