--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-	<title>nayeem portfolio</title>
+	<title>nayeem</title>
 	<!-- <title>Meghna | Responsive Multipurpose Parallax HTML5 Template</title> -->
 
   <!-- Mobile Specific Metas
@@ -228,10 +228,8 @@ End Sticky Navigation
 			</div>
 			<div class="col-lg-6">
 				<div class="content-block">
-					<h2>We’re A Digital Design Agency.</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora itaque, autem dolores culpa cum mollitia voluptate nesciunt voluptatibus quasi.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eveniet vel et mollitia nemo corporis autem dolores culpa cum mollitia voluptate</p>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, magnam.</p>
+					<h2>My Team-member/h2>
+					<p>We are in same batch on UITS, start learing by perticipating in Cyber Drill and Playing CTF</p>
 					<div class="row">
 						<div class="col-md-6">
 							<div class="media">
@@ -239,9 +237,8 @@ End Sticky Navigation
 									<i class="tf-circle-compass"></i>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">SEO Optimized</h4>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus
-										eos saepe</p>
+									<h4 class="media-heading">Cyber Drill</h4>
+									<p></p>
 								</div>
 							</div>
 						</div>
