--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ End Sticky Navigation
 								</div>
 								<div class="media-body">
 									<h4 class="media-heading">Cyber Drill</h4>
-									<p></p>
+									<p>cyberDrills at regional and national level. The ITU regional cyberDrills are designed with a dual purpose: as a platform for cooperation, information sharing, and discussions on current cybersecurity issues, as well as to provide hands-on exercise for national Computer Incident Response Teams (CIRTs) / Computer Security Incident Response Teams (C​SIRTs)​​.</p>
 								</div>
 							</div>
 						</div>
@@ -248,8 +248,8 @@ End Sticky Navigation
 									<i class="tf-hotairballoon"></i>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">Easy Customization</h4>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus
+									<h4 class="media-heading">CTF</h4>
+									<p>A cyber security CTF is a competition between security professionals and/or students learning about cyber security. This competition is used as a learning tool for everyone that is interested in cyber security and it can help sharpen the tools they have learned during their training.
 									</p>
 								</div>
 							</div>
