--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ End Sticky Navigation
 					</div>
 					<!-- Express About Yourself -->
 					<div class="content text-center">
-						<h3 class="ddd">Creative</h3>
-						<p>Alaways try to Productive things to solve real world problem. Think out of the box.
+						<h3 class="ddd">Analyser</h3>
+						<p>Alaways try to analys Productive things to solve real world problem. Think out of the box.
 						</p>
 					</div>
 				</div>
@@ -268,7 +268,7 @@ Start Call To Action
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h2>Great Design & Incredible Features</h2>
+				<h2>Thirst for learing</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? <br> Omnis accusantium ea reiciendis, fugit commodi nostrum.</p>
 				<a href="contact.html" class="btn btn-main">Start a project with us</a>
 			</div>
