--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3 class="ddd">Analyser</h3>
-						<p>Alaways try to analys Productive things to solve real world problem. Think out of the box.
+						<p>Alaways try to analyse Productive things to solve real world problem. Think out of the box.
 						</p>
 					</div>
 				</div>
@@ -195,7 +195,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3>Professional</h3>
-						<p>I'd liked describes my self as I have the standards of education and training that prepare members of the profession with the particular knowledge and skills necessary to perform their specific role within that profession Never relate my personal life with my works/works-place</p>
+						<p>I'd liked describes my self as I have the standards of education and training for profession with the particular knowledge and skills necessary to perform best. Never relate my personal life with my works/works-place</p>
 					</div>
 				</div>
 			</div>
@@ -209,8 +209,8 @@ End Sticky Navigation
 					</div>
 					<!-- Express About Yourself -->
 					<div class="content text-center">
-						<h3>Genius</h3>
-						<p>Genius is a characteristic of original and exceptional insight in the performance of some art or endeavor that surpasses expectations, sets new standards for future works, establishes better methods of operation, or remains outside the capabilities of competitors. My fellow workers says I have all the quality. Think like a genius, do like a genius, behave like a Commoner</p>
+						<h3>knowledge Seeker</h3>
+						<p>I alaways try to learn new things. Learn from the root slowy to the leaf. Think like a genius, do like a genius, behave like a Commoner</p>
 					</div>
 				</div>
 			</div>
