--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ End Sticky Navigation
 			</div>
 			<div class="col-lg-6">
 				<div class="content-block">
-					<h2>My Team-member/h2>
+					<h2>My Team-member</h2>
 					<p>We are in same batch on UITS, start learing by perticipating in Cyber Drill and Playing CTF</p>
 					<div class="row">
 						<div class="col-md-6">
