--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Start Call To Action
 			<div class="col-lg-12">
 				<!-- section title -->
 				<div class="title text-center wow fadeIn" data-wow-duration="500ms">
-					<h2>Our <span class="color">Services</span></h2>
+					<h2>My <span class="color">profession</span></h2>
 					<div class="border"></div>
 				</div>
 				<!-- /section title -->
@@ -384,7 +384,7 @@ Start Call To Action
 			<!-- section title -->
 			<div class="col-md-12">
 				<div class="title text-center">
-					<h2>Our <span class="color">Skills</span></h2>
+					<h2>My <span class="color">Skills</span></h2>
 					<div class="border"></div>
 				</div>
 			</div>
@@ -392,7 +392,7 @@ Start Call To Action
 		</div> <!-- End row -->
 		<div class="row">
 			<div class="col-md-6">
-				<h2>We’ve skilled in wide range of web and <br>
+				<h2>I have skilled myself in wide range of web and <br>
 					Other digital market tools.</h2>
 				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis magni explicabo cum aperiam recusandae
 					sunt accusamus totam. Quidem quos fugiat sapiente numquam accusamus quas hic, itaque in libero reiciendis
