--- a/index.html
+++ b/index.html
@@ -392,17 +392,15 @@ Start Call To Action
 		</div> <!-- End row -->
 		<div class="row">
 			<div class="col-md-6">
-				<h2>I have skilled myself in wide range of web and <br>
-					Other digital market tools.</h2>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis magni explicabo cum aperiam recusandae
-					sunt accusamus totam. Quidem quos fugiat sapiente numquam accusamus quas hic, itaque in libero reiciendis
-					tempora!</p>
+				<h2>I have skilled myself in wide range of Networking and <br>
+					Software development framwork.</h2>
+				<p></p>
 				<img class="img-fluid" src="images/about/company-growth.png" alt="">
 			</div>
 			<div class="col-md-6 mt-4 mt-md-0">
 				<ul class="skill-bar">
 					<li>
-						<p><span>01-</span> Business Development</p>
+						<p><span>01-</span> Java Development</p>
 						<div class="progress">
 							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
 								style="width:90%">
@@ -418,7 +416,7 @@ Start Call To Action
 						</div>
 					</li>
 					<li>
-						<p><span>03-</span> Design</p>
+						<p><span>03-</span> Network Design</p>
 						<div class="progress">
 							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
 								style="width:85%">
@@ -456,7 +454,7 @@ Start Call To Action
 			<div class="col-lg-12">
 				<!-- section title -->
 				<div class="title text-center">
-					<h2>Our <span class="color">Works</span></h2>
+					<h2>My <span class="color">Works</span></h2>
 					<div class="border"></div>
 				</div>
 				<!-- /section title -->
