--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@ Start Call To Action
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<h2>Thirst for learing</h2>
-				<p>Learn from the best. Do the best not for myself for others.
+				<strong><p>Learn from the best. Do the best not for myself for others.
 					If your sorroundings people is happy by the grace of Almighty Allah, You will be Happy too by the Almighty Allah.
-				</p>
+				</p></strong>
 				<a href="contact.html" class="btn btn-main">Start a project with us</a>
 			</div>
 		</div> <!-- End row -->
