--- a/index.html
+++ b/index.html
@@ -1190,12 +1190,12 @@ Start Our Team
 		</div> <!-- end row -->
 	</div> <!-- end container -->
 
-	<!-- Google Map -->
+	<!-- Google Map 
 	<div class="google-map">
-		<!-- Google Map -->
+		<!-- Google Map 
 		<div id="map_canvas" data-latitude="51.507351" data-longitude="-0.127758"></div>
 	</div>
-	<!-- /Google Map -->
+	/Google Map -->
 
 </section> <!-- end section -->
 
