--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Welcome Slider
  		</div>
  		<h1>Hey I am Abu Hassan Nayeem</h1>
  		<p>“Is the reward for good [anything] but good? So which of the favors of your Lord would you deny?” (Quran, 55:60-61)</p>
- 		<a href="#services" class="btn btn-transparent smooth-scroll">Download CV</a>
+ 		<a href="#services" class="btn btn-transparent smooth-scroll">tell tell 🙂🙂</a>
  	</div>
  </section>
 
